--- a/style.css
+++ b/style.css
@@ -177,3 +177,41 @@ label {
   text-align: center;
   font-size: 2rem;
 }
+
+/* media queries */
+@media only screen and (max-width: 1000px) {
+  .h3-headers {
+    font-size: 1rem;
+    margin: .5rem 1rem 0rem 1rem;
+  }
+  .heading {
+    font-size: 6rem;
+  }
+
+}
+
+@media only screen and (max-width: 700px) {
+  .h3-headers {
+    font-size: 1rem;
+    margin: .5rem 1rem 0rem 1rem;
+  }
+  .form-group {
+    padding-left: 2rem;
+  }
+}
+
+@media only screen and (max-width: 470px){
+  .h3-headers {
+    font-size: 1rem;
+    margin: .5rem 1rem 0rem 1rem;
+  }
+}
+
+
+
+
+
+
+
+
+
