small style change

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ label {
   margin-bottom: 0rem !important;
 }
 
-/* header */
+/* header at top of page*/
 
 .heading {
   font-family: 'Karla', sans-serif;
